# scape

./: .editorconfig  .gitignore  Cargo.nix  Cargo.toml  LICENSE.txt  README.md  build.rs  deny.toml  flake.nix  flake_cargo2nix.nix  justfile
.github/workflows/: rust.yml  update_flake_lock.yaml
crates/libinput/: Cargo.toml  build.rs  wrapper.h
crates/libinput/src/: lib.rs
crates/libudev/: Cargo.toml  build.rs  wrapper.h
crates/libudev/src/: lib.rs
crates/scape-config/: Cargo.toml
crates/scape-config/src/: callback.rs  keymap.rs  lib.rs  output.rs  spawn.rs  window.rs  zone.rs
crates/scape-display/: Cargo.toml
crates/scape-display/src/: action.rs  composition.rs  config.rs  config_watcher.rs  cursor.rs  egui_window.rs  focus.rs  grabs.rs  input_handler.rs  lib.rs  pipewire.rs  render.rs  shell.rs  state.rs  udev.rs  wayland.rs  wayland_old.rs  winit.rs
crates/scape-display/src/command/: mod.rs  server.rs
crates/scape-display/src/dbus/: mod.rs
crates/scape-display/src/dbus/portals/: mod.rs  session.rs
crates/scape-display/src/egui/: debug_ui.rs  mod.rs
crates/scape-display/src/protocols/: linux_drm_syncobj.rs  mod.rs  pointer_constraints.rs  pointer_gestures.rs  primary_selection.rs  single_pixel_buffer.rs  viewporter.rs  wayland.rs  wlr_layer_shell.rs  xdg_decoration.rs  xdg_foreign.rs
crates/scape-display/src/wayland/: mod.rs
crates/scape-input/: Cargo.toml
crates/scape-input/src/: input.rs  keyboard.rs  keymap.rs  lib.rs  seat.rs
crates/scape-renderer/: Cargo.toml
crates/scape-renderer/src/: drm.rs  gbm.rs  lib.rs  udev.rs  vulkan.rs
crates/scape-shared/: Cargo.toml
crates/scape-shared/src/: action.rs  args.rs  comms.rs  config_message.rs  display_message.rs  input_message.rs  lib.rs  main_message.rs  mods.rs  output.rs  renderer_message.rs  window_rule.rs  zone.rs
crates/wayland-protocol/: Cargo.toml
crates/wayland-protocol-macros/: Cargo.toml
crates/wayland-protocol-macros/src/: lib.rs  schema.rs
crates/wayland-protocol/src/: client.rs  lib.rs
crates/wayland-protocol/src/protocols/: mod.rs  wayland.rs
resources/: sample_init.lua
src/: action.rs  application_window.rs  args.rs  composition.rs  compositor.rs  config.rs  config_watcher.rs  cursor.rs  drawing.rs  egui_window.rs  focus.rs  grabs.rs  input_handler.rs  lib.rs  main.rs  pipewire.rs  render.rs  shell.rs  ssd.rs  state.rs  udev.rs  wayland.rs  winit.rs  workspace_window.rs  xwayland.rs
src/command/: mod.rs  server.rs
src/dbus/: org_gnome_mutter_screencast.rs
src/dbus/portals/: request.rs  screen_cast.rs
src/egui/: debug_ui.rs  mod.rs
src/protocols/: ext_session_lock.rs  fractional_scale.rs  input_method.rs  keyboard_shortcuts_inhibit.rs  linux_dmabuf.rs  mod.rs  pointer_constraints.rs  presentation_time.rs  relative_pointer.rs  security_context.rs  tablet.rs  text_input.rs  virtual_keyboard.rs  wayland.rs  wlr_data_control.rs  wlr_layer_shell.rs  wlr_screencopy.rs  xdg_activation.rs  xdg_decoration.rs  xdg_shell.rs  xwayland_keyboard_grab.rs  xwayland_shell.rs
src/shell/: element.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
src/xdg/: mod.rs
