[package]
edition = "2021"
name = "scape"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.4.1"
# remove dependency and replace with impl
fps_ticker = { version = "1.0.0", optional = true }
# remove dependency when fps in egui
image = { version = "0.24.6", default-features = false }
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "1.0"
xcursor = { version = "0.3" }
xkbcommon = "0.7"
clap = { version = "4.3.19", features = ["derive"] }
mlua = { version = "0.9.6", features = ["lua54", "vendored"] }
anyhow = "1.0.72"
profiling = { version = "1.0.13", optional = true }
bincode = "1.3.3"
calloop = { version = "0.13.0", features = ["executor"] }
xdg = "2.5"
notify = "6.1"
egui = "0.23"
egui_glow = "0.23"

[dependencies.smithay]
default-features = false
features = [
    "desktop",
    "wayland_frontend",
    "backend_libinput",
    "backend_winit",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_vulkan",
    "backend_egl",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_pixman",
    "renderer_glow",
    "renderer_multi",
    "x11rb_event_source",
    "use_system_lib",
    "xwayland",
]
git = "https://github.com/Dirli-V/smithay"
rev = "dfbcad2fe1a84f295a6ac180da15032ce8dfa12a"
# path = "../smithay"

[dependencies.smithay-drm-extras]
default-features = false
git = "https://github.com/Dirli-V/smithay"
rev = "dfbcad2fe1a84f295a6ac180da15032ce8dfa12a"
# path = "../smithay/smithay-drm-extras"

[dependencies.x11rb]
default-features = false
features = ["composite"]
version = "0.13.0"

[build-dependencies]
gl_generator = "0.14"

[features]
default = []
debug = ["fps_ticker", "image/png"]
profile-with-tracy = ["profiling", "profiling/profile-with-tracy"]

[profile.release]
codegen-units = 1
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
