[package]
edition = "2021"
name = "scape"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crates/scape-display",
    "crates/scape-input",
    "crates/scape-renderer",
    "crates/scape-shared",
]

[workspace.dependencies]
calloop = { version = "0.14.0", features = ["executor"] }
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
anyhow = "1.0.72"
profiling = "1.0.13"


[dependencies]
scape-display = { path = "./crates/scape-display" }
scape-input = { path = "./crates/scape-input" }
scape-renderer = { path = "./crates/scape-renderer" }
scape-shared = { path = "./crates/scape-shared" }
calloop = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
profiling = { workspace = true, optional = true }

[workspace.dependencies.smithay]
default-features = false
features = [
    "desktop",
    "wayland_frontend",
    "backend_libinput",
    "backend_winit",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_session_libseat",
    "renderer_gl",
    "renderer_pixman",
    "renderer_glow",
    "renderer_multi",
    "x11rb_event_source",
    "use_system_lib",
    "xwayland",
]
git = "https://github.com/Dirli-V/smithay"
rev = "55feba8c8"
# path = "../smithay"

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/Dirli-V/smithay"
rev = "55feba8c8"
# path = "../smithay/smithay-drm-extras"

[features]
default = []
debug = ["scape-display/debug"]
profile-with-tracy = ["profiling", "scape-display/profile-with-tracy"]

[profile.release]
codegen-units = 1
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
