[package]
edition = "2021"
name = "scape"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "crates/libinput",
    "crates/libudev",
    "crates/scape-config",
    "crates/scape-display",
    "crates/scape-input",
    "crates/scape-renderer",
    "crates/scape-shared", "crates/wayland-protocol",
    "crates/wayland-protocol-macros",
]

[workspace.dependencies]
calloop = { version = "0.14.0", features = ["executor"] }
log = { version = "0.4.27", features = [
    "kv",
    "max_level_trace",
    "release_max_level_debug",
] }
anyhow = "1.0.72"
profiling = "1.0.13"


[dependencies]
scape-config = { path = "./crates/scape-config" }
scape-display = { path = "./crates/scape-display" }
scape-input = { path = "./crates/scape-input" }
scape-renderer = { path = "./crates/scape-renderer" }
scape-shared = { path = "./crates/scape-shared" }
calloop = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
profiling = { workspace = true, optional = true }

[features]
default = []
debug = ["scape-display/debug"]
profile-with-tracy = ["profiling", "scape-display/profile-with-tracy"]

[profile.release]
codegen-units = 1
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
