[package]
name = "scape-config"
version = "0.1.0"
edition = "2021"

[dependencies]
scape-shared = { path = "../scape-shared" }
anyhow = { workspace = true }
calloop = { workspace = true }
tracing = { workspace = true }
mlua = { version = "0.10.0", features = ["lua54", "vendored"] }
xdg = "2.5"
notify = "6.1"
