[package]
name = "scape-display"
version = "0.1.0"
edition = "2021"

[dependencies]
scape-shared = { path = "../scape-shared" }
calloop = { workspace = true }
tracing = { workspace = true }
smithay = { workspace = true }
smithay-drm-extras = { workspace = true }
anyhow = { workspace = true }
profiling = { workspace = true, optional = true }

bitflags = "2.6.0"
# remove dependency and replace with impl
fps_ticker = { version = "1.0.0", optional = true }
# remove dependency when fps in egui
image = { version = "0.25.1", default-features = false }
thiserror = "1.0"
xcursor = { version = "0.3" }
mlua = { version = "0.9.6", features = ["lua54", "vendored"] }
bincode = "1.3.3"
xdg = "2.5"
notify = "6.1"
egui = "0.29"
egui_glow = "0.29"
pipewire = "0.8.0"
zbus = "4.3.1"

[dependencies.x11rb]
default-features = false
features = ["composite"]
version = "0.13.0"

[build-dependencies]
# TODO: Is this still needed after using wgpu?
gl_generator = "0.14"


[features]
default = []
debug = ["fps_ticker", "image/png"]
profile-with-tracy = ["profiling", "profiling/profile-with-tracy"]
