[package]
name = "scape-display"
version = "0.1.0"
edition = "2021"

[dependencies]
scape-shared = { path = "../scape-shared" }
calloop = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
profiling = { workspace = true, optional = true }

[features]
default = []
debug = []
profile-with-tracy = ["profiling", "profiling/profile-with-tracy"]
