[package]
name = "scape-input"
version = "0.1.0"
edition = "2021"

[dependencies]
scape-shared = { path = "../scape-shared" }
anyhow = { workspace = true }
calloop = { workspace = true }
smithay = { workspace = true }
tracing = { workspace = true }
xkbcommon = { version = "0.8", features = ["wayland"] }
