[package]
name = "scape-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
scape-shared = { path = "../scape-shared" }
anyhow = { workspace = true }
calloop = { workspace = true }
tracing = { workspace = true }
smithay = { workspace = true }
gbm = "0.18.0"
drm = "0.14.1"
udev = "0.9.1"
ash = "0.38.0"
# wgpu = { version = "23.0.1", default-features = false, features = ["wgsl"] }
wgpu = { path = "../../../wgpu/wgpu", default-features = false, features = [
    "wgsl",
] }
# wgpu = { git = "https://github.com/morr0ne/wgpu", branch = "drm-support", default-features = false, features = [
#     "wgsl",
# ] }
raw-window-handle = "0.6.2"
vulkano = "0.34.1"
