[package]
name = "scape-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
scape-shared = { path = "../scape-shared" }
anyhow = { workspace = true }
calloop = { workspace = true }
tracing = { workspace = true }
smithay = { workspace = true }
gbm = "0.18.0"
drm = "0.14.1"
udev = "0.9.1"
ash = { version = "0.38.0", features = ["linked"] }
