[package]
name = "wayland-protocol-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.30", features = ["serialize", "overlapped-lists"] }
anyhow = { workspace = true }
